# octopath-traveler-2-autosplitter-wasm

./: Cargo.toml  README.md
.github/workflows/: create-release.yml
src/: lib.rs  linux_process.rs  settings.rs  splits.rs  windows_process.rs
src/data/: mod.rs  zone.rs
src/splits/: agnea.rs  castti.rs  hikari.rs  ochette.rs  osvald.rs  partitio.rs  temenos.rs  throne.rs
